<resources>
    <string name="APP_NAME">Poulpeo</string>
    <string name="FACEBOOK_APP_ID">126923604089853</string>
    <string name="FACEBOOK_PROTOCOL_SCHEME">fb126923604089853</string>
    <string name="NEW_FEATURES_JSON_FILE_NAME">new_features.json</string>
    <string name="SCHEME_DEEP_LINK">poulpeo</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_about_label">Questions fréquentes</string>
    <string name="account_address_label">Coordonnées</string>
    <string name="account_amount">Déjà %s de gains obtenus grâce à Poulpeo ;)</string>
    <string name="account_comment_label">Commentaires ou suggestions ?</string>
    <string name="account_conditions_label">Conditions d\'utilisation</string>
    <string name="account_confidentiality_label">Confidentialité</string>
    <string name="account_connect">Vous avez déjà un compte ? Connectez vous</string>
    <string name="account_create_maintenance">Maintenance\10\10L\'inscription n\'a pas pu être effectuée car notre service est momentanément indisponible</string>
    <string name="account_create_unreachable">L\'inscription n\'a pas pu être effectuée, veuillez vérifier votre connexion Internet</string>
    <string name="account_date">Membre depuis le %s</string>
    <string name="account_debug_info_label">Recettage ENG</string>
    <string name="account_email">Email</string>
    <string name="account_email_format_error">Adresse email incorrecte</string>
    <string name="account_error_duplicate_email">L\'email saisi existe déjà</string>
    <string name="account_error_duplicate_fbemail">Un compte a déjà été créé avec l\'email de votre compte Facebook</string>
    <string name="account_error_email_empty">Merci d\'indiquer votre email</string>
    <string name="account_error_email_or_password_invalid">L\'identifiant et le mot de passe ne correspondent pas.</string>
    <string name="account_error_invalid_email">L\'email saisi n\'est pas valide</string>
    <string name="account_error_invalid_password">Le mot de passe saisi n\'est pas valide</string>
    <string name="account_error_invalid_username_long">Votre pseudo doit faire moins de 20 caractères</string>
    <string name="account_error_invalid_username_short">Votre pseudo doit faire au moins 5 caractères</string>
    <string name="account_error_password_empty">Merci d\'indiquer votre mot de passe</string>
    <string name="account_error_title">Problème</string>
    <string name="account_existing">Déjà membre ?</string>
    <string name="account_first_name">Prénom</string>
    <string name="account_forgot_password">Oublié ?</string>
    <string name="account_forgot_password_alert">Un email va vous être envoyé pour réinitialiser votre mot de passe.</string>
    <string name="account_forgot_password_title">Mot de passe oublié</string>
    <string name="account_get_maintenance">Maintenance\10\10Votre profil n\'a pas pu être récupéré car notre service est momentanément indisponible</string>
    <string name="account_get_maintenance_social_login">Maintenance\10\10La connexion n\'a pas pu être effectuée car notre service est momentanément indisponible</string>
    <string name="account_get_unreachable">Votre profil n\'a pas pu être récupéré, veuillez vérifier votre connexion Internet</string>
    <string name="account_get_unreachable_social_login">La connexion n\'a pas pu être effectuée, veuillez vérifier votre connexion Internet</string>
    <string name="account_hide_password">Cacher</string>
    <string name="account_how_it_works_label">Comment fonctionne le cashback ?</string>
    <string name="account_in_store_cashback">Cashback en magasin</string>
    <string name="account_last_name">Nom</string>
    <string name="account_legal_label">Mentions légales</string>
    <string name="account_login">Valider</string>
    <string name="account_logout_dialog_message">Voulez-vous vraiment vous déconnecter de votre compte ?</string>
    <string name="account_logout_dialog_negative_button_text">NON</string>
    <string name="account_logout_dialog_positive_button_text">OUI</string>
    <string name="account_logout_dialog_title">Déconnexion</string>
    <string name="account_logout_label">Déconnexion</string>
    <string name="account_logout_overlay_message">Déconnexion…</string>
    <string name="account_notification_label">Gestion des notifications</string>
    <string name="account_offers_info_label">Classement des offres</string>
    <string name="account_password">Mot de passe</string>
    <string name="account_rating_label">Donner votre avis sur l\'application</string>
    <string name="account_reminder_label">Alerte cashback</string>
    <string name="account_reset_password_email_error">L\'email saisi n\'existe pas</string>
    <string name="account_reset_password_error">Une erreur est survenue lors de l\'envoi, veuillez réessayer plus tard</string>
    <string name="account_show_password">Afficher</string>
    <string name="account_signin_error_fbemail">L\'email de votre compte Facebook n\'est pas valide pour Poulpeo</string>
    <string name="account_signin_error_fbinfo">Les informations de votre profil Facebook n\'ont pas pu être récupérées</string>
    <string name="account_signin_error_fbpermission">Les permissions sélectionnées sur Facebook sont insuffisantes pour la création de compte</string>
    <string name="account_signin_error_tryagain">Une erreur est survenue lors de la connexion, veuillez réessayer</string>
    <string name="account_signin_error_trylater">Une erreur est survenue lors de la connexion, veuillez réessayer plus tard</string>
    <string name="account_signup_button_email_signup">Inscription avec email</string>
    <string name="account_signup_conditions_length">6 caractères</string>
    <string name="account_signup_conditions_numeric">1 chiffre</string>
    <string name="account_signup_conditions_title">Votre mot de passe doit contenir :</string>
    <string name="account_signup_conditions_uppercase">1 majuscule</string>
    <string name="account_signup_default_bonus">3€</string>
    <string name="account_signup_error_tryagain">Une erreur est survenue lors de l\'inscription, veuillez réessayer</string>
    <string name="account_signup_error_trylater">Une erreur est survenue lors de l\'inscription, veuillez réessayer plus tard.</string>
    <string name="account_signup_sponsored_bonus">5€</string>
    <string name="account_signup_subtitle">Et vous offre 3€ lors de\10votre inscription</string>
    <string name="account_signup_textview_sponsored_label">J\'ai un code parrainage</string>
    <string name="account_signup_title">Poulpeo est\10totalement gratuit</string>
    <string name="account_sponsorship_label">Parrainages</string>
    <string name="account_support_label">Service client</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="button_apple_sign_up">Inscription avec Apple</string>
    <string name="button_facebook_sign_up">Inscription avec Facebook</string>
    <string name="button_google_sign_up">Inscription avec Google</string>
    <string name="contact_info_login_info">Identifiants Poulpeo</string>
    <string name="contact_info_missing_payment">À compléter</string>
    <string name="contact_info_payment_info">Informations bancaires</string>
    <string name="contact_info_subtitle_login">Paramètres de connexion</string>
    <string name="contact_info_subtitle_payment">Demande de paiement</string>
    <string name="contact_info_subtitle_unregister">Fermeture du compte</string>
    <string name="contact_info_unregister">Fermer mon compte Poulpeo</string>
    <string name="contact_info_update_password">Mot de passe</string>
    <string name="instore_button_access_account">Accéder à mon compte</string>
    <string name="instore_button_question">Questions fréquentes</string>
    <string name="instore_button_repair_connection">Rétablir la connexion</string>
    <string name="instore_button_subscribe">Souscrire au service</string>
    <string name="instore_cashback_activated">Cashback en magasin activé</string>
    <string name="instore_cashback_title">Cashback en magasin</string>
    <string name="instore_connection_lost">Votre carte bancaire n\'est plus connectée, tentez une nouvelle synchronisation</string>
    <string name="instore_explanation">1- Connectez votre banque en toute sécurité\102- Payez par carte bancaire dans les magasins partenaires\103- Recevez votre cashback sur votre cagnotte Poulpeo</string>
    <string name="instore_infos">De nouvelles enseignes sont ajoutées régulièrement. Certaines offres sont ciblées, %s pour vérifier votre éligibilité</string>
    <string name="instore_memo_cashback">*Pensez à bien vérifier votre éligibilité et les conditions aux offres des magasins partenaires, depuis votre compte Poulpeo sur le site internet (et non depuis l\'application)</string>
    <string name="instore_merchants_title_default">Votre carte bancaire vous rapporte aussi du cashback* ! C’est encore plus facile et automatique :</string>
    <string name="poulpeo_plus_1_description">Dès la validation de votre 4ème cashback sur les 12 derniers mois, bénéficiez de nombreux avantages.</string>
    <string name="poulpeo_plus_1_title">Le nouveau statut %s</string>
    <string name="poulpeo_plus_2_description">En devenant membre Poulpeo+ vous recevrez un bonus exceptionnel à la date de création de compte.</string>
    <string name="poulpeo_plus_2_title">Bonus fidélité</string>
    <string name="poulpeo_plus_3_description">Le parrainage offre 5€ à votre filleul et vous rapporte, non-plus 10%, mais 15% sur chacun de leurs gains ! Une pêche miraculeuse…</string>
    <string name="poulpeo_plus_3_title">Vos parrainages boostés à 15%</string>
    <string name="poulpeo_plus_4_description">Surfez sur des vagues de cashbacks boostés ! Chaque mois, Poulpeo+ vous donne accès à des bonus exclusifs (offre limitée à un bonus par boutique).</string>
    <string name="poulpeo_plus_4_title">Bonus exclusifs</string>
    <string name="poulpeo_plus_sponsor_code">Découvrir mon code parrainage</string>
</resources>