<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@color/background_alternative" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.coordinatorlayout.widget.CoordinatorLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:animateLayoutChanges="true">
        <com.google.android.material.appbar.AppBarLayout android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" android:id="@+id/appbar" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:elevation="0dp">
            <androidx.appcompat.widget.Toolbar android:id="@+id/toolBar" android:background="@drawable/gradient_theme" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" app:layout_collapseMode="1" app:popupTheme="@style/ThemeOverlay.AppCompat.Light" app:title="@string/instore_cashback_title"/>
            <include android:id="@+id/offerRanked" layout="@layout/view_offers_info"/>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true" app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout android:orientation="vertical" android:paddingBottom="180dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="22sp" android:textColor="@color/text_title_default" android:id="@+id/textViewTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/instore_merchants_title_default" android:layout_marginStart="20dp" android:layout_marginEnd="20dp"/>
                <TextView android:textSize="18sp" android:textColor="@color/text_description_default" android:gravity="center_vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/instore_explanation" android:layout_marginStart="20dp" android:layout_marginEnd="20dp"/>
                <TextView android:textSize="14sp" android:textColor="@color/text_description_default" android:id="@+id/textClickable" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/instore_infos" android:layout_marginStart="20dp" android:layout_marginEnd="20dp"/>
                <ProgressBar android:layout_gravity="center" android:id="@+id/progressBarLoader" android:layout_width="50dp" android:layout_height="50dp" android:layout_marginTop="34dp"/>
                <GridLayout android:layout_gravity="center" android:orientation="horizontal" android:id="@+id/gridLayoutMerchants" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="44dp" android:columnCount="3"/>
                <Button android:layout_gravity="start" android:id="@+id/buttonQuestions" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:text="@string/instore_button_question" android:drawablePadding="4dp" android:drawableEnd="@drawable/arrow_right_default" android:layout_marginStart="20dp" style="@style/MRButtonAlternativeNoStroke"/>
                <TextView android:textSize="12sp" android:textStyle="normal|bold|italic" android:textColor="@color/text_description_default" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/instore_memo_cashback" android:layout_marginStart="20dp" android:layout_marginEnd="20dp"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <Button android:id="@+id/buttonInstoreSubscribe" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="40dp" android:text="@string/instore_button_subscribe" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="@style/MRButton"/>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/layoutInstoreActivated" android:background="@color/background_activated" android:padding="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <TextView android:textSize="20sp" android:textColor="@color/text_description_alternative" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/instore_cashback_activated" android:drawablePadding="10dp" android:textAllCaps="true" app:drawableStartCompat="@drawable/purchase_check"/>
        <Button android:id="@+id/buttonInstoreActivated" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/instore_button_access_account" style="@style/MRButtonAlternativeTransparent"/>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/layoutInstoreWarning" android:background="@color/background_warning" android:padding="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <TextView android:textSize="16sp" android:textColor="@color/text_description_alternative" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/instore_connection_lost"/>
        <Button android:id="@+id/buttonInstoreWarning" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/instore_button_repair_connection" style="@style/MRButtonAlternativeTransparent"/>
    </LinearLayout>
</RelativeLayout>
